fixed spacing in hero text

--- a/components/examples/HeroText/HeroText.module.css
+++ b/components/examples/HeroText/HeroText.module.css
@@ -1,11 +1,11 @@
 .wrapper {
   position: relative;
   padding-top: rem(40px);
-  padding-bottom: rem(80px);
+  padding-bottom: rem(40px);
 
   @media (max-width: $mantine-breakpoint-sm) {
     padding-top: rem(40px);
-    padding-bottom: rem(60px);
+    padding-bottom: rem(30px);
   }
 }
 
